CCCP-13, feature: prometheus metrics (#61)
* CCCP-151, feature: make sure the priority fee is higher than the minimum value

* CCCP-13, feature: init prometheus endpoint

* CCCP-13, chore: specifiy prometheus config

* CCCP-13, chore: move sentry to cccp-metrics

* CCCP-13, feature: register evm prometheus metrics

* CCCP-13, chore: use metric labels

* CCCP-13, fix: resolve invalid payed fee calc

* CCCP-13, chore: send balance metrics

* CCCP-13, chore: fix payed fee metric logic

* CCCP-13, feature: add system uptime metric

* CCCP-13, chore: update configs

* CCCP-13, fix: remove redundant crate

* CCCP-13, chore: apply cargo-clippy

* CCCP-13, chore: move balance check

--- a/configs/config.mainnet.yaml
+++ b/configs/config.mainnet.yaml
@@ -84,6 +84,11 @@ handler_configs:
 
 ###  The items below are optional. ###
 
+prometheus_config:
+  is_enabled: false
+  is_external: false
+  port: 8000
+
 bootstrap_config:
   is_enabled: true
   round_offset: 3
