CCCP-164, feature: Add chainlink aggregator interface into EthClient

--- a/configs/config.mainnet.yaml
+++ b/configs/config.mainnet.yaml
@@ -30,6 +30,8 @@ evm_providers:
     socket_address: "0x4A31FfeAc276CC5e508cAC0568d932d398C4DD84"
     vault_address: "0x2F95C102Cc26875406BC689Fb01aE382B82AA535"
     authority_address: "0xAdcaa90cabDc730855064d5b0f5242c16A9B7E10"
+    chainlink_usdc_usd_address: "0x8fFfFfd4AfB6115b954Bd326cbe7B4BA576818f6",
+    chainlink_usdt_usd_address: "0x3E7d1eAB13ad0104d2750B8863b489D65364e32D",
   - name: "bsc"
     id: 56
     provider: ""
@@ -53,9 +55,9 @@ evm_providers:
 
 handler_configs:
   - handler_type: BridgeRelay
-    watch_list: [3068, 1, 56, 137]
+    watch_list: [ 3068, 1, 56, 137 ]
   - handler_type: Roundup
-    watch_list: [3068]
+    watch_list: [ 3068 ]
 
 periodic_configs:
   oracle_price_feeder:
