--- a/periodic/Cargo.toml
+++ b/periodic/Cargo.toml
@@ -18,11 +18,11 @@ cron = { workspace = true }
 ethers = { workspace = true }
 serde_json = { workspace = true }
 serde_yaml = { workspace = true }
-reqwest = { workspace = true, features = ["json"] }
+reqwest = { workspace = true }
 serde = { workspace = true, features = ["derive"] }
 tokio = { workspace = true, features = ["macros"] }
 
 # CCCP
-cc-cli = { path = "../client/cli" }
-cccp-client = { path = "../client" }
-cccp-primitives = { path = "../primitives" }
+cc-cli = { path = "../client/cli", default-features = false }
+cccp-client = { path = "../client", default-features = false }
+cccp-primitives = { path = "../primitives", default-features = false }
