--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,9 @@
 [workspace]
+resolver = "2"
 members = [
     "client",
     "client/cli",
-	"metrics",
+    "metrics",
     "periodic",
     "primitives",
     "relayer",
@@ -22,7 +23,7 @@ repository = "https://github.com/bifrost-platform/cccp-relayer"
 # General
 log = "0.4.17"
 env_logger = "0.10.0"
-sentry = "0.30.0"
+sentry = { version = "0.31.5", default-features = false, features = ["reqwest", "rustls", "backtrace", "contexts", "panic"] }
 
 async-trait = "0.1.57"
 async-recursion = "1.0.4"
@@ -31,7 +32,7 @@ cron = "0.12.0"
 chrono = "0.4.24"
 thiserror = "1.0.39"
 futures = "0.3.26"
-reqwest = "0.11.15"
+reqwest = { version = "0.11.18", default-features = false, features = ["rustls-tls", "json"] }
 rand = "0.8.5"
 lazy_static = "1.4.0"
 
@@ -40,7 +41,7 @@ serde = "1.0.153"
 serde_json = "1.0.94"
 
 hex = "0.4.3"
-ethers = "2.0.2"
+ethers = "2.0.7"
 k256 = "0.13.1"
 sha3 = "0.10.7"
 
@@ -48,11 +49,14 @@ tokio = "1.22.0"
 tokio-stream = "0.1"
 
 # Substrate Client
-sc-cli = { git = "https://github.com/bifrost-platform/bifrost-substrate", branch = "bifrost-polkadot-v0.9.39" }
-sc-utils = { git = "https://github.com/bifrost-platform/bifrost-substrate", branch = "bifrost-polkadot-v0.9.39" }
-sc-service = { git = "https://github.com/bifrost-platform/bifrost-substrate", branch = "bifrost-polkadot-v0.9.39" }
-sc-sysinfo = { git = "https://github.com/bifrost-platform/bifrost-substrate", branch = "bifrost-polkadot-v0.9.39" }
-prometheus-endpoint = { package = "substrate-prometheus-endpoint", git = "https://github.com/bifrost-platform/bifrost-substrate", branch = "bifrost-polkadot-v0.9.39" }
+sc-cli = { git = "https://github.com/bifrost-platform/bifrost-substrate", default-features = false, branch = "bifrost-polkadot-v0.9.39" }
+sc-utils = { git = "https://github.com/bifrost-platform/bifrost-substrate", default-features = false, branch = "bifrost-polkadot-v0.9.39" }
+sc-service = { git = "https://github.com/bifrost-platform/bifrost-substrate", default-features = false, branch = "bifrost-polkadot-v0.9.39" }
+sc-sysinfo = { git = "https://github.com/bifrost-platform/bifrost-substrate", default-features = false, branch = "bifrost-polkadot-v0.9.39" }
+prometheus-endpoint = { package = "substrate-prometheus-endpoint", default-features = false, git = "https://github.com/bifrost-platform/bifrost-substrate", branch = "bifrost-polkadot-v0.9.39" }
 
 # Substrate Builds
-substrate-build-script-utils = { git = "https://github.com/bifrost-platform/bifrost-substrate", branch = "bifrost-polkadot-v0.9.39" }
+substrate-build-script-utils = { git = "https://github.com/bifrost-platform/bifrost-substrate", default-features = false, branch = "bifrost-polkadot-v0.9.39" }
+
+[profile.production]
+inherits = "release"
