CCCP-159, feature: release v0.1.0 (#64)
* CCCP-159, chore: print sys info

* CCCP-159, chore: cleanup comments and simple fixes

* CCCP-159, chore: remove btc impls

* CCCP-159, docs: update readme

* CCCP-159, chore: apply cargo-clippy

* [CCCP-123-deploy/dockerfile] (#65)

* CCCP-123: deploy: Create Dockerfile, .dockerignore

* CCCP-123, chore: Bump sentry to 0.31.5

* CCCP-123, chore: Remove openssl dependency

* CCCP-123, chore: Rollback rust-toolchain

* CCCP-159, docs: update readme

---------

Co-authored-by: Min-seong Kwon <kwonarseus@gmail.com>

--- a/periodic/Cargo.toml
+++ b/periodic/Cargo.toml
@@ -13,17 +13,16 @@ repository = { workspace = true }
 log = { workspace = true }
 sentry = { workspace = true }
 async-trait = { workspace = true }
-
 chrono = { workspace = true }
 cron = { workspace = true }
 ethers = { workspace = true }
 serde_json = { workspace = true }
 serde_yaml = { workspace = true }
-reqwest = { workspace = true, features = ["json"] }
+reqwest = { workspace = true }
 serde = { workspace = true, features = ["derive"] }
 tokio = { workspace = true, features = ["macros"] }
 
 # CCCP
-cc-cli = { path = "../client/cli" }
-cccp-client = { path = "../client" }
-cccp-primitives = { path = "../primitives" }
+cc-cli = { path = "../client/cli", default-features = false }
+cccp-client = { path = "../client", default-features = false }
+cccp-primitives = { path = "../primitives", default-features = false }
