--- a/configs/config.testnet.yaml
+++ b/configs/config.testnet.yaml
@@ -1,17 +1,12 @@
 system:
   id: "testnet"
-  private_key: ""
+  private_key: "<YOUR_RELAYER_PRIVATE_KEY>"
   debug_mode: false
-
-bitcoin:
-  provider: ""
-  username: ""
-  password: ""
 
 evm_providers:
   - name: "bifrost"
     id: 49088
-    provider: ""
+    provider: "<YOUR_BIFROST_RPC_ENDPOINT>"
     call_interval: 1500
     block_confirmations: 5
     is_native: true
@@ -22,7 +17,7 @@ evm_providers:
     relayer_manager_address: "0x0000000000000000000000000000000000002000"
   - name: "goerli"
     id: 5
-    provider: ""
+    provider: "<YOUR_GOERLI_RPC_ENDPOINT>"
     call_interval: 6000
     block_confirmations: 1
     is_relay_target: false
@@ -32,7 +27,7 @@ evm_providers:
     authority_address: "0xF51f7e267D2D966f8d3Ff2fea42B410bB14800e1"
   - name: "bsc"
     id: 97
-    provider: ""
+    provider: "<YOUR_BSC_RPC_ENDPOINT>"
     call_interval: 1500
     block_confirmations: 5
     is_relay_target: false
@@ -43,7 +38,7 @@ evm_providers:
     chainlink_usdt_usd_address: "0xEca2605f0BCF2BA5966372C99837b1F182d3D620"
   - name: "mumbai"
     id: 80001
-    provider: ""
+    provider: "<YOUR_MUMBAI_RPC_ENDPOINT>"
     call_interval: 1000
     block_confirmations: 7
     is_relay_target: false
@@ -56,9 +51,9 @@ evm_providers:
 
 handler_configs:
   - handler_type: BridgeRelay
-    watch_list: [ 49088, 5, 97, 80001 ]
+    watch_list: [49088, 5, 97, 80001]
   - handler_type: Roundup
-    watch_list: [ 49088 ]
+    watch_list: [49088]
 
 periodic_configs:
   oracle_price_feeder:
@@ -68,7 +63,8 @@ periodic_configs:
   heartbeat: "0 * * * * * *" # Every minute.
 
 sentry_config:
-  dsn: ""
+  is_enabled: false
+  dsn: "<YOUR_SENTRY_DSN>"
 
 prometheus_config:
   is_enabled: false
