--- a/configs/cccp-relayer.service.example
+++ b/configs/cccp-relayer.service.example
@@ -1,15 +1,15 @@
 [Unit]
-Description=CCCP Relayer Daemon
+Description=Bifrost Relayer Daemon
 After=network.target
 StartLimitIntervalSec=5
 
 [Service]
 Type=simple
 Restart=on-failure
-SyslogIdentifier=cccp-relayer
+SyslogIdentifier=bifrost-relayer
 SyslogFacility=local7
-WorkingDirectory=<PATH_TO_CCCP_RELAYER>
-ExecStart=<PATH_TO_CCCP_RELAYER> --chain <mainnet|testnet|<PATH_TO_CONFIG_FILE>>
+WorkingDirectory=<PATH_TO_BIFROST_RELAYER>
+ExecStart=<PATH_TO_BIFROST_RELAYER> --chain <mainnet|testnet|<PATH_TO_CONFIG_FILE>>
 KillSignal=SIGHUP
 
 [Install]
