--- a/relayer/Cargo.toml
+++ b/relayer/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "cccp-relayer"
+name = "bifrost-relayer"
 version = "0.1.0"
-description = "The core rust implementation for BIFROST relayer"
+description = "The core rust implementation for Bifrost relayer"
 authors = { workspace = true }
 homepage = { workspace = true }
 edition = { workspace = true }
@@ -20,12 +20,12 @@ futures = { workspace = true }
 clap = { workspace = true, features = ["derive"] }
 tokio = { workspace = true, features = ["signal", "rt-multi-thread", "parking_lot"] }
 
-# CCCP
-cc-cli = { path = "../client/cli", default-features = false }
-cccp-client = { path = "../client", default-features = false }
-cccp-periodic = { path = "../periodic", default-features = false }
-cccp-primitives = { path = "../primitives", default-features = false }
-cccp-metrics = { path = "../metrics", default-features = false }
+# Bifrost Relayer
+br-cli = { path = "../client/cli", default-features = false }
+br-client = { path = "../client", default-features = false }
+br-periodic = { path = "../periodic", default-features = false }
+br-primitives = { path = "../primitives", default-features = false }
+br-metrics = { path = "../metrics", default-features = false }
 
 # Substrate
 sc-cli = { workspace = true }
@@ -37,4 +37,4 @@ prometheus-endpoint = { workspace = true }
 substrate-build-script-utils = { workspace = true }
 
 [[bin]]
-name = "cccp-relayer"
+name = "bifrost-relayer"
