--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,10 +14,10 @@ panic = "unwind"
 
 [workspace.package]
 authors = ["bifrost-platform"]
-homepage = "https://thebifrost.io"
+homepage = "https://www.bifrostnetwork.com"
 edition = "2021"
 license = "Apache-2.0"
-repository = "https://github.com/bifrost-platform/cccp-relayer"
+repository = "https://github.com/bifrost-platform/bifrost-relayer.rs"
 
 [workspace.dependencies]
 # General
