--- a/metrics/Cargo.toml
+++ b/metrics/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "cccp-metrics"
+name = "br-metrics"
 version = "0.1.0"
-description = "The monitoring & metric tools for BIFROST relayer"
+description = "The monitoring & metric tools for Bifrost relayer"
 authors = { workspace = true }
 homepage = { workspace = true }
 edition = { workspace = true }
@@ -14,8 +14,8 @@ lazy_static = { workspace = true }
 sentry = { workspace = true }
 ethers = { workspace = true }
 
-# CCCP
-cccp-primitives = { path = "../primitives", default-features = false }
+# Bifrost Relayer
+br-primitives = { path = "../primitives", default-features = false }
 
 # Substrate
 prometheus-endpoint = { workspace = true }
