--- a/primitives/Cargo.toml
+++ b/primitives/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "cccp-primitives"
+name = "br-primitives"
 version = "0.1.0"
-description = "The primitives for BIFROST relayer"
+description = "The primitives for Bifrost relayer"
 authors = { workspace = true }
 homepage = { workspace = true }
 edition = { workspace = true }
