--- a/configs/bifrost-relayer.service.example
+++ b/configs/bifrost-relayer.service.example
@@ -5,7 +5,8 @@ StartLimitIntervalSec=5
 
 [Service]
 Type=simple
-Restart=on-failure
+Restart=always
+RestartSec=5
 SyslogIdentifier=bifrost-relayer
 SyslogFacility=local7
 WorkingDirectory=<DIRECTORY_WHERE_BIFROST_RELAYER_LOCATES>
