--- a/configs/config.testnet.yaml
+++ b/configs/config.testnet.yaml
@@ -1,5 +1,4 @@
 system:
-  id: "testnet"
   private_key: "<YOUR_RELAYER_PRIVATE_KEY>"
   debug_mode: false
 
@@ -7,7 +6,7 @@ evm_providers:
   - name: "bifrost"
     id: 49088
     provider: "<YOUR_BIFROST_RPC_ENDPOINT>"
-    call_interval: 1500
+    call_interval: 3000
     block_confirmations: 5
     is_native: true
     is_relay_target: true
@@ -18,7 +17,7 @@ evm_providers:
   - name: "ethereum"
     id: 5
     provider: "<YOUR_GOERLI_RPC_ENDPOINT>"
-    call_interval: 6000
+    call_interval: 12000
     block_confirmations: 1
     is_relay_target: false
     eip1559: true
@@ -28,7 +27,7 @@ evm_providers:
   - name: "bsc"
     id: 97
     provider: "<YOUR_BSC_RPC_ENDPOINT>"
-    call_interval: 1500
+    call_interval: 3000
     block_confirmations: 5
     is_relay_target: false
     socket_address: "0x8039c3AD8ED55509fD3f6Daa78867923fDe6E61c"
@@ -39,7 +38,7 @@ evm_providers:
   - name: "polygon"
     id: 80001
     provider: "<YOUR_MUMBAI_RPC_ENDPOINT>"
-    call_interval: 1000
+    call_interval: 2000
     block_confirmations: 7
     is_relay_target: false
     eip1559: true
@@ -62,7 +61,15 @@ periodic_configs:
   roundup_emitter: "*/15 * * * * * *" # Every 15th seconds.
   heartbeat: "0 * * * * * *" # Every minute.
 
+
+###  The items below are optional. ###
+
+bootstrap_config:
+  is_enabled: true
+  round_offset: 6
+
 sentry_config:
+  environment: "<YOUR_SENTRY_ENVIRONMENT>"
   is_enabled: false
   dsn: "<YOUR_SENTRY_DSN>"
 
@@ -70,7 +77,3 @@ prometheus_config:
   is_enabled: false
   is_external: false
   port: 8000
-
-bootstrap_config:
-  is_enabled: true
-  round_offset: 6
