--- a/configs/config.testnet.yaml
+++ b/configs/config.testnet.yaml
@@ -50,17 +50,14 @@ evm_providers:
 
 handler_configs:
   - handler_type: BridgeRelay
-    watch_list: [ 49088, 5, 97, 80001 ]
+    watch_list: [49088, 5, 97, 80001]
   - handler_type: Roundup
-    watch_list: [ 49088 ]
+    watch_list: [49088]
 
 periodic_configs:
-  oracle_price_feeder:
-    - chain_id: 49088
-      schedule: "0 */5 * * * * *" # Every 5th minute.
+  oracle_price_feeder: "0 */5 * * * * *" # Every 5th minute.
   roundup_emitter: "*/15 * * * * * *" # Every 15th seconds.
   heartbeat: "0 * * * * * *" # Every minute.
-
 
 ###  The items below are optional. ###
 
