CCCP-191, feature: Give some randomness to price_feeder's feeding period

--- a/primitives/Cargo.toml
+++ b/primitives/Cargo.toml
@@ -11,6 +11,7 @@ repository = { workspace = true }
 [dependencies]
 # General
 hex = { workspace = true }
+chrono = { workspace = true }
 cron = { workspace = true }
 ethers = { workspace = true }
 thiserror = { workspace = true }
