--- a/periodic/Cargo.toml
+++ b/periodic/Cargo.toml
@@ -18,6 +18,7 @@ cron = { workspace = true }
 ethers = { workspace = true }
 serde_json = { workspace = true }
 serde_yaml = { workspace = true }
+rand = { workspace = true }
 reqwest = { workspace = true }
 serde = { workspace = true, features = ["derive"] }
 tokio = { workspace = true, features = ["macros"] }
