--- a/.github/workflows/sonar.yaml
+++ b/.github/workflows/sonar.yaml
@@ -6,7 +6,8 @@ on:
 jobs:
   build:
     name: Build
-    runs-on: self-hosted
+    runs-on: 
+      group: ec2-runner-group
     steps:
       - uses: actions/checkout@v2
         with:
