--- a/configs/config.mainnet.yaml
+++ b/configs/config.mainnet.yaml
@@ -26,6 +26,7 @@ evm_providers:
     authority_address: "0xAdcaa90cabDc730855064d5b0f5242c16A9B7E10"
     chainlink_usdc_usd_address: "0x8fFfFfd4AfB6115b954Bd326cbe7B4BA576818f6"
     chainlink_usdt_usd_address: "0x3E7d1eAB13ad0104d2750B8863b489D65364e32D"
+    chainlink_dai_usd_address: "0xAed0c38402a5d19df6E4c03F4E2DceD6e29c1ee9"
   - name: "bsc"
     id: 56
     provider: "<YOUR_BSC_RPC_ENDPOINT>"
