CCCP-228, chore: ignore configuration files for local uses

--- a/.gitignore
+++ b/.gitignore
@@ -175,3 +175,5 @@ Cargo.lock
 .ionide
 
 # End of https://www.toptal.com/developers/gitignore/api/visualstudiocode,macos,intellij,rust
+
+*.local.yaml
