--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,12 @@
 [workspace]
 resolver = "2"
 members = [
-    "client",
-    "client/cli",
-    "metrics",
-    "periodic",
-    "primitives",
-    "relayer",
+	"client",
+	"client/cli",
+	"metrics",
+	"periodic",
+	"primitives",
+	"relayer",
 ]
 
 [profile.release]
@@ -23,7 +23,13 @@ repository = "https://github.com/bifrost-platform/bifrost-relayer.rs"
 # General
 log = "0.4.17"
 env_logger = "0.10.0"
-sentry = { version = "0.31.5", default-features = false, features = ["reqwest", "rustls", "backtrace", "contexts", "panic"] }
+sentry = { version = "0.31.5", default-features = false, features = [
+	"reqwest",
+	"rustls",
+	"backtrace",
+	"contexts",
+	"panic",
+] }
 
 async-trait = "0.1.57"
 async-recursion = "1.0.4"
@@ -32,7 +38,10 @@ cron = "0.12.0"
 chrono = "0.4.24"
 thiserror = "1.0.39"
 futures = "0.3.26"
-reqwest = { version = "0.11.18", default-features = false, features = ["rustls-tls", "json"] }
+reqwest = { version = "0.11.18", default-features = false, features = [
+	"rustls-tls",
+	"json",
+] }
 rand = "0.8.5"
 lazy_static = "1.4.0"
 
@@ -49,14 +58,14 @@ tokio = "1.22.0"
 tokio-stream = "0.1"
 
 # Substrate Client
-sc-cli = { git = "https://github.com/bifrost-platform/bifrost-substrate", default-features = false, branch = "bifrost-polkadot-v0.9.39" }
-sc-utils = { git = "https://github.com/bifrost-platform/bifrost-substrate", default-features = false, branch = "bifrost-polkadot-v0.9.39" }
-sc-service = { git = "https://github.com/bifrost-platform/bifrost-substrate", default-features = false, branch = "bifrost-polkadot-v0.9.39" }
-sc-sysinfo = { git = "https://github.com/bifrost-platform/bifrost-substrate", default-features = false, branch = "bifrost-polkadot-v0.9.39" }
-prometheus-endpoint = { package = "substrate-prometheus-endpoint", default-features = false, git = "https://github.com/bifrost-platform/bifrost-substrate", branch = "bifrost-polkadot-v0.9.39" }
+sc-cli = { git = "https://github.com/bifrost-platform/bifrost-substrate", default-features = false, branch = "bifrost-polkadot-v0.9.43" }
+sc-utils = { git = "https://github.com/bifrost-platform/bifrost-substrate", default-features = false, branch = "bifrost-polkadot-v0.9.43" }
+sc-service = { git = "https://github.com/bifrost-platform/bifrost-substrate", default-features = false, branch = "bifrost-polkadot-v0.9.43" }
+sc-sysinfo = { git = "https://github.com/bifrost-platform/bifrost-substrate", default-features = false, branch = "bifrost-polkadot-v0.9.43" }
+prometheus-endpoint = { package = "substrate-prometheus-endpoint", default-features = false, git = "https://github.com/bifrost-platform/bifrost-substrate", branch = "bifrost-polkadot-v0.9.43" }
 
 # Substrate Builds
-substrate-build-script-utils = { git = "https://github.com/bifrost-platform/bifrost-substrate", default-features = false, branch = "bifrost-polkadot-v0.9.39" }
+substrate-build-script-utils = { git = "https://github.com/bifrost-platform/bifrost-substrate", default-features = false, branch = "bifrost-polkadot-v0.9.43" }
 
 [profile.production]
 inherits = "release"
