--- a/configs/config.mainnet.yaml
+++ b/configs/config.mainnet.yaml
@@ -28,6 +28,7 @@ evm_providers:
     chainlink_usdt_usd_address: "0x3E7d1eAB13ad0104d2750B8863b489D65364e32D"
     chainlink_dai_usd_address: "0xAed0c38402a5d19df6E4c03F4E2DceD6e29c1ee9"
     chainlink_btc_usd_address: "0xf4030086522a5beea4988f8ca5b36dbc97bee88c"
+    chainlink_wbtc_usd_address: "0xfdFD9C85aD200c506Cf9e21F1FD8dd01932FBB23"
   - name: "bsc"
     id: 56
     provider: "<YOUR_BSC_RPC_ENDPOINT>"
